    (patch from João Pinto #691213)
  * Restore split positions more accurately (patch from Glenn Moss 
    #797953)
  * Fix activity notification in active terminals. (patch from Chris
    Newton #748681)
  * Stop leaking child processes if terminals are closed using the
    context menu (#308025)
  * Don't forget tab order and custom labels when closing terminals
    in them (#711356)

terminator 0.95:
  * Add a configuration option to enable a DBus server
  * Add a configuration option to disable font anti-aliasing
  * Improved error handling in various locations
  * Maven URL handler plugin (thanks to Julien Nicoulaud)

terminator 0.94:
  * Improved support for entirely hiding Terminal titlebars
  * Plugin configuration via preferences UI
  * New plugins: Terminal Screenshot, Watch Terminal Activity
  * Add preferences support for profile encodings (LP: #597340)
  * Deprecate the tabbar_hide option, replacing it with a 'hidden'
	   option for tab_position.
  * Add profiles, custom titlebar and custom tab labels to layouts.
  * Improved directional navigation
  * Backwards compatibility fixes for RHEL 5.5.
  * Disabled-by-default keybindings for switching broadcast modes
  * Bug fixes for LPs: #566925, #563445, #583041, #589200, #576279,
	   #597340, #554571, #597651, #308025, #600280, #576276, #570706,
	   #575827 and some other bugs.

terminator 0.93:
  * Add preferences support for alternate_screen_scroll (LP: #558832).
  * Bug fixes for LPs: #562490, #563911, #546665, #558324, #490627,
	   #558376, #558375, #559185, #558330, #554571, #554440, #561697, 
		 #562039, #558832, #561710, #563445 and some other bugs.

terminator 0.92:
  * Lots of juicy bug fixes
  * Implement the Palette section of the Profile preferences

terminator 0.91:
  * Fix various stupid release bugs from 0.90

terminator 0.90:
  * Almost complete refactoring of the code. This almost
	   inevitably means some regressions, unfortunately, but